frontend/prodConfig/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: web-ip
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - area.oden-app.com
      secretName: sveltekit-tls
  rules:
    - host: area.oden-app.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sveltekit-service
                port:
                  number: 80
